Fix overflow-x bug on iOS

--- a/static/style.css
+++ b/static/style.css
@@ -7,9 +7,6 @@ html, body {
     scroll-behavior: smooth;
     position: relative;
     width: 100%;
-}
-
-html {
     overflow-x: hidden;
 }
 
@@ -21,6 +18,7 @@ html {
     margin-left: 10%;
     margin-right: 10%;
     position: relative;
+    margin-top: 100px;
 }
 
 #splash-box h1 {
@@ -392,9 +390,10 @@ dialog img {
 /* NAVBAR */
 
 nav {
-    position: sticky;
+    position: fixed;
     top: 0px;
     z-index: 100000;
+    width: 100%;
 }
 
 nav ul {
